Finish: Add 'Transformasi Kolom menjadi Baris pada Data Frame' tricks
- Add 'Transformasi Kolom menjadi Baris' points

--- a/Trik_Pandas_13.ipynb
+++ b/Trik_Pandas_13.ipynb
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb19eda9",
+   "id": "43cacf92",
    "metadata": {},
    "source": [
     "#### \n",
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b88facf7",
+   "id": "6fc726c2",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0e96ae2b",
+   "id": "0b80f0b9",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0e7ced0",
+   "id": "f86ac2e9",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a74f956f",
+   "id": "d1219e6f",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8881605",
+   "id": "258d8847",
    "metadata": {},
    "source": [
     "#### Membuat Kolom Baru dengan `for loop` dan `f-string`"
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48db9133",
+   "id": "4426ae94",
    "metadata": {},
    "source": [
     "- Kita bisa menggunakan looping dan f-string untuk membuat beberapa kolom baru sekaligus.\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3dabddb2",
+   "id": "2908c9a2",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6e39569",
+   "id": "b84285fe",
    "metadata": {},
    "source": [
     "#### \n",
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73be992d",
+   "id": "c26c1de4",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a7343999",
+   "id": "83f9d98d",
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab292216",
+   "id": "555fd1be",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -836,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b037f1d3",
+   "id": "bf0be1c0",
    "metadata": {},
    "outputs": [
     {
@@ -870,83 +870,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
        "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
        "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
+       "      <td>6</td>\n",
        "      <td>5</td>\n",
-       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>3</td>\n",
        "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
        "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>8</td>\n",
+       "      <td>7</td>\n",
        "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -954,16 +954,16 @@
       ],
       "text/plain": [
        "   A  B  C  D  E\n",
-       "0  6  5  7  1  3\n",
-       "1  5  5  4  7  6\n",
-       "2  4  1  7  5  7\n",
-       "3  7  1  4  5  2\n",
-       "4  5  5  6  1  5\n",
-       "5  1  6  2  6  6\n",
-       "6  7  4  3  3  1\n",
-       "7  7  1  5  7  7\n",
-       "8  1  3  7  4  3\n",
-       "9  8  5  4  8  6"
+       "0  3  5  9  9  2\n",
+       "1  5  5  5  8  4\n",
+       "2  4  6  5  4  8\n",
+       "3  8  3  6  3  9\n",
+       "4  8  3  1  8  3\n",
+       "5  1  9  3  5  3\n",
+       "6  7  6  8  6  8\n",
+       "7  3  7  6  3  6\n",
+       "8  9  2  7  7  2\n",
+       "9  7  5  7  1  4"
       ]
      },
      "execution_count": 11,
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9fc1226",
+   "id": "da74fdcf",
    "metadata": {},
    "source": [
     "#### Seleksi baris dengan `between()`"
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7611f90e",
+   "id": "e90217a3",
    "metadata": {},
    "source": [
     "- Parameter inclusive memiliki nilai default *true*\n",
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0446f8d3",
+   "id": "b9660b9a",
    "metadata": {},
    "outputs": [
     {
@@ -1034,28 +1034,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
        "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
+       "      <td>6</td>\n",
        "      <td>5</td>\n",
-       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
        "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1063,9 +1071,10 @@
       ],
       "text/plain": [
        "   A  B  C  D  E\n",
-       "1  5  5  4  7  6\n",
-       "2  4  1  7  5  7\n",
-       "4  5  5  6  1  5"
+       "0  3  5  9  9  2\n",
+       "1  5  5  5  8  4\n",
+       "2  4  6  5  4  8\n",
+       "7  3  7  6  3  6"
       ]
      },
      "execution_count": 12,
@@ -1080,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "809469ba",
+   "id": "4b969e65",
    "metadata": {},
    "outputs": [
     {
@@ -1113,12 +1122,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
+       "      <td>6</td>\n",
        "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
        "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1126,7 +1151,9 @@
       ],
       "text/plain": [
        "   A  B  C  D  E\n",
-       "2  4  1  7  5  7"
+       "0  3  5  9  9  2\n",
+       "2  4  6  5  4  8\n",
+       "7  3  7  6  3  6"
       ]
      },
      "execution_count": 13,
@@ -1136,6 +1163,306 @@
    ],
    "source": [
     "df[df['A'].between(2, 5, inclusive=False)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7152654d",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #52 Transformasi Kolom menjadi Baris pada Data Frame\n",
+    "#### Source : https://youtu.be/4AOst9ifgrc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86564416",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "89847042",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82c44f8d",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ac22a114",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kode_area</th>\n",
+       "      <th>pabrik</th>\n",
+       "      <th>gudang</th>\n",
+       "      <th>toko</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>123</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>456</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>789</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>321</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   kode_area  pabrik  gudang  toko\n",
+       "0        123       4       2    64\n",
+       "1        456       2       4    32\n",
+       "2        789       5       7    15\n",
+       "3        321       0       3    24"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {\n",
+    "'kode_area': [123, 456, 789, 321],\n",
+    "'pabrik': [4, 2, 5, 0],\n",
+    "'gudang': [2, 4, 7, 3],\n",
+    "'toko': [64, 32, 15, 24]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13864687",
+   "metadata": {},
+   "source": [
+    "#### Transformasi Kolom menjadi Baris"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4fcad0e",
+   "metadata": {},
+   "source": [
+    "df.melt() adalah fungsi yang digunakan untuk mentransformasikan kolom menjadi baris\n",
+    "penggunaan method .melt() setidaknya membutuhkan 3 parameter\n",
+    "parameter pertama adalah id_vars yang sering kali berasosiasi dengan primary key\n",
+    "parameter kedua adalah var_name yang berasosiasi dengan nama kolom baru hasil transformasi kolom menjadi baris\n",
+    "parameter ketiga adalah value name yang akan menampung jumlah dari hasil transformasi kolom menjadi baris\n",
+    "- Fungsi `melt()` digunakan untuk mentrasformasikan kolom menjadi sebuah baris.\n",
+    "- Fungsi ini membutuhkan minimal 3 buah parameter.\n",
+    "- Parameter pertama yaitu *id_vars*. Digunakan untuk menetukan kunci utama/ primary key.\n",
+    "- Parameter kedua yaitu *var_name*. Digunakan untuk menentukan nama kolom baru.\n",
+    "- Parameter ketiga yaitu *value_name*. Digunakan untuk menampung jumlah dari kolom."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "65effef6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kode_area</th>\n",
+       "      <th>jenis_bangunan</th>\n",
+       "      <th>jumlah</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>123</td>\n",
+       "      <td>pabrik</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>456</td>\n",
+       "      <td>pabrik</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>789</td>\n",
+       "      <td>pabrik</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>321</td>\n",
+       "      <td>pabrik</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>123</td>\n",
+       "      <td>gudang</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>456</td>\n",
+       "      <td>gudang</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>789</td>\n",
+       "      <td>gudang</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>321</td>\n",
+       "      <td>gudang</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>123</td>\n",
+       "      <td>toko</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>456</td>\n",
+       "      <td>toko</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>789</td>\n",
+       "      <td>toko</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>321</td>\n",
+       "      <td>toko</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    kode_area jenis_bangunan  jumlah\n",
+       "0         123         pabrik       4\n",
+       "1         456         pabrik       2\n",
+       "2         789         pabrik       5\n",
+       "3         321         pabrik       0\n",
+       "4         123         gudang       2\n",
+       "5         456         gudang       4\n",
+       "6         789         gudang       7\n",
+       "7         321         gudang       3\n",
+       "8         123           toko      64\n",
+       "9         456           toko      32\n",
+       "10        789           toko      15\n",
+       "11        321           toko      24"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.melt(id_vars='kode_area', \n",
+    "             var_name='jenis_bangunan', \n",
+    "             value_name='jumlah')\n",
+    "df"
    ]
   }
  ],
