Update: Add 'Menyimpan Data Frame sebagai File CSV' tricks
- Add 'Menyimpan Data Frame sebagai File CSV' points

--- a/Trik_Pandas_14.ipynb
+++ b/Trik_Pandas_14.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "58b48698",
+   "id": "ffcd0b7d",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8f6a4ab",
+   "id": "8bb7346f",
    "metadata": {},
    "source": [
     "# Title: Pandas 14"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b5a130b",
+   "id": "b13ea41f",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21311f05",
+   "id": "f2b29868",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a92bfbc4",
+   "id": "c073e5b9",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54956eb7",
+   "id": "ae7efe3a",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d7fe3f4c",
+   "id": "681c6ed8",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "989313ef",
+   "id": "7d29ff72",
    "metadata": {},
    "source": [
     "#### Membuat Kategori Baru berdasarkan Threshold (ambang batas)"
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "489404fd",
+   "id": "9d7f890b",
    "metadata": {},
    "source": [
     "- Fungsi `value_counts()` digunakan untuk menghitung jumlah kemunculan dari masing-masing kolom.\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e25aeee9",
+   "id": "49e7ad4c",
    "metadata": {},
    "outputs": [
     {
@@ -207,10 +207,10 @@
       "text/plain": [
        "mancing      5\n",
        "baca         2\n",
-       "camping      1\n",
-       "fotograsi    1\n",
        "jogging      1\n",
        "renang       1\n",
+       "fotograsi    1\n",
+       "camping      1\n",
        "Name: hobi, dtype: int64"
       ]
      },
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d8659d2b",
+   "id": "c608fa47",
    "metadata": {},
    "outputs": [
     {
@@ -234,10 +234,10 @@
       "text/plain": [
        "mancing      0.454545\n",
        "baca         0.181818\n",
-       "camping      0.090909\n",
-       "fotograsi    0.090909\n",
        "jogging      0.090909\n",
        "renang       0.090909\n",
+       "fotograsi    0.090909\n",
+       "camping      0.090909\n",
        "Name: hobi, dtype: float64"
       ]
      },
@@ -254,13 +254,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "463fd4d7",
+   "id": "dae7706e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['camping', 'fotograsi', 'jogging', 'renang'], dtype='object')"
+       "Index(['jogging', 'renang', 'fotograsi', 'camping'], dtype='object')"
       ]
      },
      "execution_count": 5,
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "350aabd1",
+   "id": "b886c81d",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "13478aa0",
+   "id": "856956b6",
    "metadata": {},
    "outputs": [
     {
@@ -329,6 +329,320 @@
    ],
    "source": [
     "df['hobi'].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6658f7bc",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #54 Menyimpan Data Frame sebagai File CSV\n",
+    "#### Source : https://youtu.be/S1_DkpdZpb0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82ab540b",
+   "metadata": {},
+   "source": [
+    "#### Import Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3b00d985",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cek versi\n",
+    "print (pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd3f6273",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "db461aed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nama</th>\n",
+       "      <th>jenis_kelamin</th>\n",
+       "      <th>usia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bayu</td>\n",
+       "      <td>L</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>indra</td>\n",
+       "      <td>L</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>devi</td>\n",
+       "      <td>P</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>agni</td>\n",
+       "      <td>L</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    nama jenis_kelamin  usia\n",
+       "0   bayu             L    23\n",
+       "1  indra             L    21\n",
+       "2   devi             P    22\n",
+       "3   agni             L    25"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {'nama':['bayu','indra','devi','agni'],\n",
+    "       'jenis_kelamin':['L','L','P','L'],\n",
+    "       'usia':[23,21,22,25]}\n",
+    "df = pd.DataFrame(data)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42a064ff",
+   "metadata": {},
+   "source": [
+    "#### Menyimpan Data Frame Sebagai File CSV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "559254b8",
+   "metadata": {},
+   "source": [
+    "- Untuk menyimpan dataframe kedalam file dengan ekstensi CSV kita dapat menggunakan fungsi `to_csv()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9856d12d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data_peserta.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0f08b462",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nama</th>\n",
+       "      <th>jenis_kelamin</th>\n",
+       "      <th>usia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bayu</td>\n",
+       "      <td>L</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>indra</td>\n",
+       "      <td>L</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>devi</td>\n",
+       "      <td>P</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>agni</td>\n",
+       "      <td>L</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    nama jenis_kelamin  usia\n",
+       "0   bayu             L    23\n",
+       "1  indra             L    21\n",
+       "2   devi             P    22\n",
+       "3   agni             L    25"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('data_peserta.csv',index_col = 0)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9863d3f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nama</th>\n",
+       "      <th>jenis_kelamin</th>\n",
+       "      <th>usia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bayu</td>\n",
+       "      <td>L</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>indra</td>\n",
+       "      <td>L</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>devi</td>\n",
+       "      <td>P</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>agni</td>\n",
+       "      <td>L</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    nama jenis_kelamin  usia\n",
+       "0   bayu             L    23\n",
+       "1  indra             L    21\n",
+       "2   devi             P    22\n",
+       "3   agni             L    25"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_csv('data_peserta.csv',index=False)\n",
+    "df = pd.read_csv('data_peserta.csv')\n",
+    "df"
    ]
   }
  ],
