--- a/Trik_Pandas_14.ipynb
+++ b/Trik_Pandas_14.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ffcd0b7d",
+   "id": "0f509bd0",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bb7346f",
+   "id": "b1cbb38d",
    "metadata": {},
    "source": [
     "# Title: Pandas 14"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b13ea41f",
+   "id": "d08fb1e8",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2b29868",
+   "id": "9703776b",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c073e5b9",
+   "id": "5cfa6d92",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae7efe3a",
+   "id": "fffbc61a",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "681c6ed8",
+   "id": "523f1d27",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d29ff72",
+   "id": "25f043ac",
    "metadata": {},
    "source": [
     "#### Membuat Kategori Baru berdasarkan Threshold (ambang batas)"
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d7f890b",
+   "id": "6ef37f45",
    "metadata": {},
    "source": [
     "- Fungsi `value_counts()` digunakan untuk menghitung jumlah kemunculan dari masing-masing kolom.\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "49e7ad4c",
+   "id": "f72e414c",
    "metadata": {},
    "outputs": [
     {
@@ -207,10 +207,10 @@
       "text/plain": [
        "mancing      5\n",
        "baca         2\n",
-       "jogging      1\n",
+       "camping      1\n",
        "renang       1\n",
        "fotograsi    1\n",
-       "camping      1\n",
+       "jogging      1\n",
        "Name: hobi, dtype: int64"
       ]
      },
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c608fa47",
+   "id": "ab3b3bb1",
    "metadata": {},
    "outputs": [
     {
@@ -234,10 +234,10 @@
       "text/plain": [
        "mancing      0.454545\n",
        "baca         0.181818\n",
-       "jogging      0.090909\n",
+       "camping      0.090909\n",
        "renang       0.090909\n",
        "fotograsi    0.090909\n",
-       "camping      0.090909\n",
+       "jogging      0.090909\n",
        "Name: hobi, dtype: float64"
       ]
      },
@@ -254,13 +254,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dae7706e",
+   "id": "b48627b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['jogging', 'renang', 'fotograsi', 'camping'], dtype='object')"
+       "Index(['camping', 'renang', 'fotograsi', 'jogging'], dtype='object')"
       ]
      },
      "execution_count": 5,
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b886c81d",
+   "id": "249bf7e0",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "856956b6",
+   "id": "9ab9cc7b",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6658f7bc",
+   "id": "34037bb1",
    "metadata": {},
    "source": [
     "#### \n",
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82ab540b",
+   "id": "5c0c612d",
    "metadata": {},
    "source": [
     "#### Import Module"
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3b00d985",
+   "id": "30be9022",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd3f6273",
+   "id": "e6fd092f",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "db461aed",
+   "id": "2081757e",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a064ff",
+   "id": "ab043781",
    "metadata": {},
    "source": [
     "#### Menyimpan Data Frame Sebagai File CSV"
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "559254b8",
+   "id": "c41f77df",
    "metadata": {},
    "source": [
     "- Untuk menyimpan dataframe kedalam file dengan ekstensi CSV kita dapat menggunakan fungsi `to_csv()`."
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9856d12d",
+   "id": "29b3b638",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0f08b462",
+   "id": "81a02d66",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9863d3f3",
+   "id": "04e14a6d",
    "metadata": {},
    "outputs": [
     {
@@ -643,6 +643,262 @@
     "df.to_csv('data_peserta.csv',index=False)\n",
     "df = pd.read_csv('data_peserta.csv')\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0493de74",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #55 Menghitung Jumlah Baris Menurut Kriteria Tertentu\n",
+    "#### Source : https://youtu.be/-u5Yvlt5RvI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75206df8",
+   "metadata": {},
+   "source": [
+    "#### Import Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ac888f1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n",
+      "1.20.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b42b4bfb",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "74485971",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  C  D  E\n",
+       "0  8  1  8  3  9\n",
+       "1  5  5  3  1  1\n",
+       "2  5  1  1  9  5\n",
+       "3  4  6  1  1  7\n",
+       "4  1  2  6  4  8\n",
+       "5  3  8  3  4  1\n",
+       "6  9  2  8  1  6\n",
+       "7  5  5  1  3  2\n",
+       "8  7  5  5  3  2\n",
+       "9  4  7  9  4  9"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_rows = 10\n",
+    "n_cols = 5\n",
+    "cols = tuple('ABCDE')\n",
+    "\n",
+    "df = pd.DataFrame(np.random.randint(1,10,size=(n_rows,n_cols)),columns=cols)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43bd67b8",
+   "metadata": {},
+   "source": [
+    "#### Menghitung Jumlah Baris Menurut Kriteria Tertentu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeeebeb3",
+   "metadata": {},
+   "source": [
+    "- Seperti materi sebelumnya, kita bisa kenakan operasi agregasi kepada suatu dataframe.\n",
+    "- Namun kali ini kita akan menambahkan suatu kriteria pada operasi tersebut."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f48828d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df['A']<5).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "028895ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df['A']<5).mean()"
    ]
   }
  ],
