--- a/Trik_Pandas_14.ipynb
+++ b/Trik_Pandas_14.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "0f509bd0",
+   "id": "b1668b68",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1cbb38d",
+   "id": "a972979d",
    "metadata": {},
    "source": [
     "# Title: Pandas 14"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d08fb1e8",
+   "id": "4a8dd2d4",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9703776b",
+   "id": "ca70cced",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5cfa6d92",
+   "id": "c8173d1c",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fffbc61a",
+   "id": "7e854676",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "523f1d27",
+   "id": "47560879",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25f043ac",
+   "id": "b04e8665",
    "metadata": {},
    "source": [
     "#### Membuat Kategori Baru berdasarkan Threshold (ambang batas)"
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ef37f45",
+   "id": "0b8c1dd1",
    "metadata": {},
    "source": [
     "- Fungsi `value_counts()` digunakan untuk menghitung jumlah kemunculan dari masing-masing kolom.\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f72e414c",
+   "id": "bfe13181",
    "metadata": {},
    "outputs": [
     {
@@ -208,9 +208,9 @@
        "mancing      5\n",
        "baca         2\n",
        "camping      1\n",
-       "renang       1\n",
        "fotograsi    1\n",
        "jogging      1\n",
+       "renang       1\n",
        "Name: hobi, dtype: int64"
       ]
      },
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ab3b3bb1",
+   "id": "0a4bbf1d",
    "metadata": {},
    "outputs": [
     {
@@ -235,9 +235,9 @@
        "mancing      0.454545\n",
        "baca         0.181818\n",
        "camping      0.090909\n",
-       "renang       0.090909\n",
        "fotograsi    0.090909\n",
        "jogging      0.090909\n",
+       "renang       0.090909\n",
        "Name: hobi, dtype: float64"
       ]
      },
@@ -254,13 +254,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b48627b4",
+   "id": "3492e285",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['camping', 'renang', 'fotograsi', 'jogging'], dtype='object')"
+       "Index(['camping', 'fotograsi', 'jogging', 'renang'], dtype='object')"
       ]
      },
      "execution_count": 5,
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "249bf7e0",
+   "id": "ff847c12",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9ab9cc7b",
+   "id": "a1f191b0",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34037bb1",
+   "id": "bb432671",
    "metadata": {},
    "source": [
     "#### \n",
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c0c612d",
+   "id": "15c5ccdc",
    "metadata": {},
    "source": [
     "#### Import Module"
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "30be9022",
+   "id": "93bba558",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6fd092f",
+   "id": "170216d3",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2081757e",
+   "id": "7f8b66cb",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab043781",
+   "id": "998ea7a3",
    "metadata": {},
    "source": [
     "#### Menyimpan Data Frame Sebagai File CSV"
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c41f77df",
+   "id": "b6b4b791",
    "metadata": {},
    "source": [
     "- Untuk menyimpan dataframe kedalam file dengan ekstensi CSV kita dapat menggunakan fungsi `to_csv()`."
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "29b3b638",
+   "id": "7f95b6bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "81a02d66",
+   "id": "5172d467",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "04e14a6d",
+   "id": "9cb8c856",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0493de74",
+   "id": "0bc885c8",
    "metadata": {},
    "source": [
     "#### \n",
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75206df8",
+   "id": "3dee04a9",
    "metadata": {},
    "source": [
     "#### Import Module"
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ac888f1b",
+   "id": "f0d03bda",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42b4bfb",
+   "id": "2e148de3",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "74485971",
+   "id": "51e61469",
    "metadata": {},
    "outputs": [
     {
@@ -732,83 +732,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
        "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
        "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>3</td>\n",
        "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>8</td>\n",
        "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>8</td>\n",
        "      <td>9</td>\n",
-       "      <td>2</td>\n",
        "      <td>8</td>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
        "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>7</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>4</td>\n",
        "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
        "      <td>9</td>\n",
        "      <td>4</td>\n",
-       "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -816,16 +816,16 @@
       ],
       "text/plain": [
        "   A  B  C  D  E\n",
-       "0  8  1  8  3  9\n",
-       "1  5  5  3  1  1\n",
-       "2  5  1  1  9  5\n",
-       "3  4  6  1  1  7\n",
-       "4  1  2  6  4  8\n",
-       "5  3  8  3  4  1\n",
-       "6  9  2  8  1  6\n",
-       "7  5  5  1  3  2\n",
-       "8  7  5  5  3  2\n",
-       "9  4  7  9  4  9"
+       "0  3  1  2  8  9\n",
+       "1  1  3  3  6  9\n",
+       "2  7  6  2  7  1\n",
+       "3  6  8  3  8  8\n",
+       "4  1  3  2  5  8\n",
+       "5  8  8  1  7  7\n",
+       "6  8  9  8  1  2\n",
+       "7  6  7  2  9  6\n",
+       "8  7  7  8  3  9\n",
+       "9  7  2  8  9  4"
       ]
      },
      "execution_count": 14,
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43bd67b8",
+   "id": "d4e5769a",
    "metadata": {},
    "source": [
     "#### Menghitung Jumlah Baris Menurut Kriteria Tertentu"
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeeebeb3",
+   "id": "d0bad511",
    "metadata": {},
    "source": [
     "- Seperti materi sebelumnya, kita bisa kenakan operasi agregasi kepada suatu dataframe.\n",
@@ -862,13 +862,13 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f48828d7",
+   "id": "7177d315",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "3"
       ]
      },
      "execution_count": 15,
@@ -883,13 +883,13 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "028895ca",
+   "id": "ea6513a8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4"
+       "0.3"
       ]
      },
      "execution_count": 16,
@@ -899,6 +899,302 @@
    ],
    "source": [
     "(df['A']<5).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68c1729b",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #56 Mengeluarkan Kolom Dari Data Frame\n",
+    "#### Source :https://youtu.be/K9TGJTuX30w"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf147dd2",
+   "metadata": {},
+   "source": [
+    "#### Import Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "56901ab0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a2322d2",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "df7a6b2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nama</th>\n",
+       "      <th>jenis_kelamin</th>\n",
+       "      <th>usia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bayu</td>\n",
+       "      <td>L</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>indra</td>\n",
+       "      <td>L</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>devi</td>\n",
+       "      <td>P</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>agni</td>\n",
+       "      <td>L</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    nama jenis_kelamin  usia\n",
+       "0   bayu             L    23\n",
+       "1  indra             L    21\n",
+       "2   devi             P    22\n",
+       "3   agni             L    25"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {'nama':['bayu','indra','devi','agni'],\n",
+    "       'jenis_kelamin':['L','L','P','L'],\n",
+    "       'usia':[23,21,22,25]}\n",
+    "df = pd.DataFrame(data)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3f1208c",
+   "metadata": {},
+   "source": [
+    "#### Mengeluarkan Kolom dari Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3d61cfb",
+   "metadata": {},
+   "source": [
+    "- Untuk kolom dari dataframe kita bisa menggunakan fungsi `pop()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "234255dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "usia = df.pop('usia').to_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c1c698a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nama</th>\n",
+       "      <th>jenis_kelamin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bayu</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>indra</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>devi</td>\n",
+       "      <td>P</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>agni</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    nama jenis_kelamin\n",
+       "0   bayu             L\n",
+       "1  indra             L\n",
+       "2   devi             P\n",
+       "3   agni             L"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "46496fcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>usia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   usia\n",
+       "0    23\n",
+       "1    21\n",
+       "2    22\n",
+       "3    25"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usia"
    ]
   }
  ],
